<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_ddpg</name>
  <version>0.0.0</version>
  <description>The turtlebot3_ddpg package</description>

  <maintainer email="Yi.Dong@liverpool.ac.uk">Dong Yi</maintainer>

  <license>CC0-1.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>gazebo_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>

</package>
